public/css/style.css
a:hover {
    text-decoration: none;
}

.no-overflow {
    overflow-y: hidden;
}

.streams {
    margin-top: 20px;
}

.streams a:hover .stream-title {
    color: #3F51B5;
}

.stream-title {
    font-size: 1.2em;
    height: 1.2em;
    margin-top: 8px;
    margin-bottom: 5px;
    color: #32323e;
    white-space: nowrap;
    overflow-x: hidden;
    text-overflow: ellipsis;
}

.stream-description {
    color: #8c8c8c;
    margin-bottom: 10px;
    overflow-x: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

iframe {
    min-height: 100%;
    min-width: 100%;
}

.stream-button {
    z-index: 100;
    position: absolute;
    top: 10px;
    right: 20px;
}

.container-fluid {
    padding: 0px;
    margin: 0px;
    max-height: 100vh;
}

.row.no-padding {
  margin-right:0;
  margin-left:0;
}
.row.no-padding > [class*='col-'] {
  padding-right:0;
  padding-left:0;
}

.navbar-brand {
    margin-right: 20px;
}

.logo {
    font-weight: 300;
    color: #333;
}

.logo .blue {
    content: "hls";
    font-weight: 600;
    color: #3F51B5;
}

.btn-on-stream, .btn-on-stream:active, .btn-on-stream:focus {
    color: transparent;
}

.btn-on-stream:hover {
    color: #6441BD;
    background-color: #f2f2f2;
    border-color: #666666;
}

footer {
    margin-top: 80px;
    border-top: 1px solid #e7e7e7;
    padding-top: 25px;
    padding-bottom: 40px;
}

footer h2 {
    font-size: 32px;
}

footer h2 small {
    font-size: 14px;
}

